# Physthon

./: pyproject.toml  test.phys
physthon/: __init__.py  __main__.py  encoding.py
physthon/parser/: __init__.py  grammar.lark
scripts/: format.sh
tests/: grammar
